--- a/news.html
+++ b/news.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <title>Natura Café - NEWS</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
-        <link rel="icon" type="image/png" href="images/favicon.png"
-        <meta name="viewoport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="images/favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">               
+        <link href="https://momoriko.github.io/NaturaCaf-/CSS/style.css" rel="stylesheet">              
     </head>
 
     <body>
